--- a/styles/index.css
+++ b/styles/index.css
@@ -172,6 +172,7 @@
     justify-content: space-around;
 
     margin-top: 80px;
+    padding: 30px 0px;
 }
 
 .testimonial-card {
@@ -183,7 +184,6 @@
     border-radius: 60px 20px;
 
     text-align: center;
-
 }
 
 .icon-testimony {
@@ -192,4 +192,15 @@
     margin-top: -70px;
     margin-left: -270px;
     border-radius: 100px;
+}
+
+.banks-section {
+    background-color: var(--background-white);
+
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 20px;
 }
