--- a/styles/index.css
+++ b/styles/index.css
@@ -18,9 +18,10 @@
 .header {
     background-color: var(--white);
     display: flex;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
+
+    width: 100%;
     padding: 5px 60px;
     position: fixed;
 }
@@ -58,12 +59,14 @@
     background-position: bottom right;
     background-repeat: no-repeat;
 
-    font-family: 'Poppins', sans-serif;
-    
-    width: 100%;
-    padding-top: 270px 60px 0px 60px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
+
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    padding-top: 270px 60px 0px 60px;
 }
 
 .title {
@@ -86,7 +89,9 @@
 .cards-banner {
     display: flex;
     flex-direction: row;
+    align-items: center;
 
+    width: 100%;
     margin-top: 60px;
 }
 
@@ -96,8 +101,12 @@
     font-family: 'Poppins', sans-serif;
     text-align: center;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     width: 400px;
-    height: 300px;
+    height: 350px;
 
     margin: 50px;
     margin-bottom: -150px;
@@ -107,7 +116,7 @@
 }
 
 .card:hover {
-    transform: translateY(-25px);
+    transform: translateY(-30px);
 }
 
 .subtitle {
@@ -118,6 +127,7 @@
 
 .text {
     color: var(--dark-grey);
+    font-weight: bold;
     margin-bottom: 20px; 
 }
 
@@ -126,17 +136,20 @@
 
     font-family: 'Poppins', sans-serif;
 
-    display: flex;
-    width: 100%;
+    display: flex; 
     align-items: center;
     flex-direction: column;
 
+    width: 100%;
     padding-top: 320px;
+    padding-bottom: 30px;
 }
 
 .topics-container {
     display: flex;
     flex-direction: row;
+
+    width: 100%;
     margin: 60px;
 }
 
@@ -158,10 +171,10 @@
     font-family: 'Poppins', sans-serif;
 
     display: flex;
-    width: 100%;
     flex-direction: column;
     align-items: center;
 
+    width: 100%;
     padding: 60px;
 }
 
@@ -171,12 +184,12 @@
 
 .testimonials-container {
     display: flex;
-    width: 100%;
     flex-direction: row;
     justify-content: space-around;
 
+    width: 100%;
+    max-width: 980px;
     margin-top: 80px;
-
     padding: 30px 0px;
 
 }
@@ -221,4 +234,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px 200px;
+
+    width: 100%;
 }
