--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@
     --grey: #30343E;
 
     --white: #FFF;
-    --background-white: #F2F2F2;
+    --background-white: #D9D9D9;
 }
 
 .header {
@@ -112,6 +112,7 @@
     margin-bottom: -150px;
     padding: 40px;
     border-radius: 20px;
+
     transition: 0.4s;
 }
 
@@ -165,8 +166,7 @@
 }
 
 .testimonials-section {
-    background: rgb(66,66,69);
-    background: radial-gradient(circle, rgba(66,66,69,1) 0%, rgba(29,36,43,1) 79%);
+    background-color: var(--dark-grey);
     
     font-family: 'Poppins', sans-serif;
 
@@ -176,6 +176,12 @@
 
     width: 100%;
     padding: 60px;
+}
+
+.icon-quote {
+    color: var(--dark-green);
+    
+    margin: 0px 50px;
 }
 
 .testimony-title {
@@ -195,21 +201,25 @@
 }
 
 .testimonial-card {
-    background-color: var(--background-white);
+    background-color: var(--white);
 
     width: 400px;
     height: 300px;
     padding: 60px 30px;
-    border-radius: 60px 20px;
+    border: 10px solid var(--white);
+    border-radius: 70px 20px;
 
     text-align: center;
+    
+    transition: .4s;
+
 }
 
 .icon-testimony {
     color: var(--orange);
-    font-size: 150px;
-    margin-top: -70px;
-    margin-left: -270px;
+    font-size: 160px;
+    margin-top: -75px;
+    margin-left: -250px;
     border-radius: 100px;
 }
 
