modify the testimonials card

--- a/styles/index.css
+++ b/styles/index.css
@@ -202,6 +202,7 @@
 
 .testimonial-card {
     background-color: var(--white);
+    box-shadow: 15px 15px 0px var(--background-white);
 
     width: 400px;
     height: 300px;
