--- a/styles/index.css
+++ b/styles/index.css
@@ -72,7 +72,7 @@
 .title {
     color: var(--grey);
 
-    font-size: 60px;
+    font-size: 3rem;
     font-weight: 700;
 }
 
@@ -81,7 +81,7 @@
 
     padding-top: 140px;
     
-    font-size: 70px;
+    font-size: 4rem;
     text-shadow: 4px 7px 7px #000;
 
 }
@@ -89,6 +89,7 @@
 .cards-banner {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
 
     width: 100%;
@@ -105,19 +106,17 @@
     flex-direction: column;
     justify-content: space-between;
 
-    width: 400px;
-    height: 350px;
+    width: 30%;
 
-    margin: 50px;
     margin-bottom: -150px;
-    padding: 40px;
-    border-radius: 20px;
+    padding: 60px 40px;
+    border-radius: 40px;
 
     transition: 0.4s;
 }
 
 .card:hover {
-    transform: translateY(-30px);
+    transform: translateY(-40px);
 }
 
 .subtitle {
@@ -204,8 +203,7 @@
     background-color: var(--white);
     box-shadow: 15px 15px 0px var(--background-white);
 
-    width: 400px;
-    height: 300px;
+    width: 45%;
     padding: 60px 30px;
     border: 10px solid var(--white);
     border-radius: 70px 20px;
@@ -218,9 +216,9 @@
 
 .icon-testimony {
     color: var(--orange);
-    font-size: 160px;
+    font-size: 9rem;
     margin-top: -75px;
-    margin-left: -250px;
+    margin-left: -300px;
     border-radius: 100px;
 }
 
@@ -228,10 +226,11 @@
     background-color: var(--background-white);
 
     display: flex;
-    width: 100%;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+
+    width: 100%;
     padding: 20px 20px;
 }
 
@@ -248,3 +247,67 @@
 
     width: 100%;
 }
+
+@media (max-width: 980px) {
+
+    .header {
+        padding: 5px 20px; 
+    }
+
+    .title {
+        font-size: 3rem;
+    }
+
+    .cards-banner {
+        flex-direction: column;
+    }
+
+    .card {
+        width: 70%;
+        margin: 0px;
+        margin-bottom: 50px;
+    }
+
+    .vantages-section {
+        padding: 100px 20px;
+        text-align: center; 
+    }
+
+    .topics-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .topic {
+        width: 80%;
+    }
+
+    .testimonials-section {
+        padding: 0;
+    }
+
+    .testimonials-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .testimonial-card {
+        margin-bottom: 60px;
+        width: 80%;
+    }
+
+    .bank-img {
+        width: 20%;
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+
+    .btn-header {
+        padding: 5px 10px;
+    }
+
+
+}
+
